changes in index

--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
         <div class="topnav-centered">
             <a href="#home" class="active" style="font-size: 1.5rem;">Diversity of Indian Culture and Heritage</a>
         </div>
-
-        <!-- Left-aligned links (default) -->
-        <a href="WebDev/templates/facts.html">FACTS</a>
+        <div class="topnav-left">
+            <!-- Left-aligned links (default) -->
+            <a href="WebDev/templates/facts.html">FACTS</a>
+        </div>
         <!-- Right-aligned links -->
         <div class="topnav-right">
             <a href="WebDev/templates/contact.html">CONTACT</a>
@@ -36,7 +37,8 @@
         <div class="grid">
             <a href="WebDev/templates/architecture.html">
                 <figure>
-                    <img class="items" src="WebDev/templates/images/main/architecture.jpg" alt="Diversity in Architecture">
+                    <img class="items" src="WebDev/templates/images/main/architecture.jpg"
+                        alt="Diversity in Architecture">
                     <figcaption>Diversity in Indian Architecture</figcaption>
                 </figure>
             </a>
